--- a/views/new.erb
+++ b/views/new.erb
@@ -1,4 +1,4 @@
-<form class="form-horizontal">
+<form class="form-horizontal" method="post" action='/create'>
   <fieldset>
     <legend>Add a video link</legend>
     <div class="control-group">
