--- a/views/new.erb
+++ b/views/new.erb
@@ -19,6 +19,7 @@
       <div class="controls">
         <textarea class="input-xlarge" name="url" rows="3"></textarea>
         <p class="help-block">Paste the URL of the video to add</p>
+        <p class="help-block">Dimensions should be 280x158</p>
       </div>
     </div>
     <div class="control-group">
@@ -41,7 +42,7 @@
       </div>
     </div>
     <div class="form-actions">
-      <button type="submit" class="btn btn-primary">Add video</button>
+      <button class="btn btn-primary">Add video</button>
       <button class="btn">Cancel</button>
     </div>
   </fieldset>
