add and delete work. edit not done yet.

--- a/views/new.erb
+++ b/views/new.erb
@@ -4,7 +4,7 @@
     <div class="control-group">
       <label class="control-label">Title</label>
       <div class="controls">
-        <input type="text" name="title" class="input-xlarge" placeholder="Title">
+        <input type="text" name="name" class="input-xlarge" placeholder="Title">
         <p class="help-block">Enter your title of the linked movie</p>
       </div>
     </div>
