--- a/views/videos.erb
+++ b/views/videos.erb
@@ -1,24 +1,17 @@
-<% if @rows.present?  %>
-<div class="row-fluid">
-  <ul class="thumbnails">
+<ul class="thumbnails">
 <% @rows.each do |row| %>
 
-
-    <li class="span4">
-      <div class="thumbnail">
-        <%= row['url'] %>
-        <div class="caption">
-          <h3><%= row['title'] %> </h3>
-          <div class='thumbnail_text'>
-          <p><%= row['description'] %></p>
-          <p class="thumbnail_buttons"><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
-          <div>
-        </div>
-      </div>
-    </li>
-
+  <li class="span4">
+    <a class="thumbnail">
+      <form action='/videos/<%= row['id'] %>/delete' method="post" name="video_id">
+        <button class="btn btn-danger btn-mini">Delete</button>
+      </form>
+      <%= row['url'] %>
+    </a>
+    <h3><%= row['name'] %></h3>
+    <p><%= row['description'] %></p>
+  </li>
 
 <% end %>
+
 </ul>
-</div>
-<% end %>
