--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
   <div class="container">
   <div class="navbar">
     <div class="navbar-inner">
-      <!-- <div class="container" style="width: auto;"> -->
+
 
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
           <span class="icon-bar"></span>
@@ -28,9 +28,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">View video categories  <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Dynamic video categories! SO HOT</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <% @nav_rows.each do |row| %>
+                <li><a href="/videos/<%= row['category'] %>"><%= row['category'] %></a></li>
+                <% end %>
                 <li class="divider"></li>
                 <li><a href="/videos">Show all videos</a></li>
               </ul>
