--- a/views/new.erb
+++ b/views/new.erb
@@ -8,13 +8,13 @@
         <p class="help-block">Enter your title of the linked movie</p>
       </div>
     </div>
-     <div class="control-group">
+    <div class="control-group">
       <label class="control-label">Description</label>
       <div class="controls">
         <textarea class="input-xlarge" name="description" rows="3"></textarea>
       </div>
     </div>
-     <div class="control-group">
+    <div class="control-group">
       <label class="control-label">URL</label>
       <div class="controls">
         <textarea class="input-xlarge" name="url" rows="3"></textarea>
@@ -23,22 +23,15 @@
       </div>
     </div>
     <div class="control-group">
-     <label class="control-label">Select category</label>
+      <label class="control-label">Category</label>
       <div class="controls">
-        <select name="category">
-          <option>Comedy</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-        <p class="help-block">Or create a new category below</p>
-      </div>
-    </div>
-    <div class="control-group">
-      <label class="control-label">New category</label>
-      <div class="controls">
-        <input type="text" name="title" class="input-xlarge" placeholder="New Category">
+        <input type="text" name="category" class="input-xlarge" placeholder="Category">
+        <p class="help-block">Existing Categories:</p>
+        <p class="help-block">
+          <% @nav_rows.each do |row| %>
+          |<%= row['category'] %>|
+          <% end %>
+        </p>
       </div>
     </div>
     <div class="form-actions">
