--- a/views/videos.erb
+++ b/views/videos.erb
@@ -1,10 +1,12 @@
+
 <ul class="thumbnails">
   <% @rows.each do |row| %>
 
   <li class="span4">
     <a class="thumbnail">
       <iframe width="281" height="158" src="<%= row['url'] %>" frameborder="0" allowfullscreen></iframe>
-
+    <a href="/videos/<%= row['id'] %>/edit" class="btn btn-info btn-mini">Edit</a>
+    <p>
     <form action='/videos/<%= row['id'] %>/delete' method="post" name="video_id">
       <button class="btn btn-danger btn-mini">Delete</button>
     </form>
