--- a/views/new.erb
+++ b/views/new.erb
@@ -1,23 +1,23 @@
-<form class="form-horizontal" method="post" action='/create'>
+<form class="form-horizontal" method="post" action='<%= @row.nil? ? "/create" : "/videos/@{@row['id]}" %>'>
   <fieldset>
     <legend>Add a video link</legend>
     <div class="control-group">
       <label class="control-label">Title</label>
       <div class="controls">
-        <input type="text" name="name" class="input-xlarge" placeholder="Title">
+        <input type="text" name="name" class="input-xlarge" value="<%= @row['name'] if @row %>">
         <p class="help-block">Enter your title of the linked movie</p>
       </div>
     </div>
     <div class="control-group">
       <label class="control-label">Description</label>
       <div class="controls">
-        <textarea class="input-xlarge" name="description" rows="3"></textarea>
+        <input type="text" name="description" class="input-xlarge" value="<%= @row['description'] if @row %>">
       </div>
     </div>
     <div class="control-group">
       <label class="control-label">URL</label>
       <div class="controls">
-        <textarea class="input-xlarge" name="url" rows="3"></textarea>
+        <input type="text" name="url" class="input-xlarge" value="<%= @row['url'] if @row %>">
         <p class="help-block">Paste the URL of the video to add</p>
         <p class="help-block">Dimensions should be 280x158</p>
       </div>
@@ -25,7 +25,7 @@
     <div class="control-group">
       <label class="control-label">Category</label>
       <div class="controls">
-        <input type="text" name="category" class="input-xlarge" placeholder="Category">
+        <input type="text" name="category" class="input-xlarge" value="<%= @row['category'] if @row %>">
         <p class="help-block">Existing Categories:</p>
         <p class="help-block">
           <% @nav_rows.each do |row| %>
