--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,20 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <script src="/js/jquery-1.9.1.js"></script>
   <script src="/bootstrap/js/bootstrap.js"></script>
+
+<script type="text/javascript">
+    $(function () {
+        $('body').popover({
+            selector: '[data-toggle="popover"]'
+        });
+
+        $('body').tooltip({
+            selector: 'a[rel="tooltip"], [data-toggle="tooltip"]'
+        });
+    });
+</script>
+
+
 </head>
 <body>
   <div class="container">
@@ -45,6 +59,7 @@
 
 
 <%= yield %>
+
 </div>
 </body>
 </html>
