--- a/views/videos.erb
+++ b/views/videos.erb
@@ -3,16 +3,20 @@
   <% @rows.each do |row| %>
 
   <li class="span4">
-    <a class="thumbnail">
+    <div class="thumbnail">
+
+      <a href="/videos/<%= row['id'] %>/edit" data-toggle="tooltip" title="Edit video" ><i class="icon-edit"></i></a>
       <iframe width="281" height="158" src="<%= row['url'] %>" frameborder="0" allowfullscreen></iframe>
-    <a href="/videos/<%= row['id'] %>/edit" class="btn btn-info btn-mini">Edit</a>
-    <p>
-    <form action='/videos/<%= row['id'] %>/delete' method="post" name="video_id">
-      <button class="btn btn-danger btn-mini">Delete</button>
-    </form>
-    </a>
+
+      <form action='/videos/<%= row['id'] %>/delete' method="post" name="video_id">
+        <button class="btn btn-danger btn-mini">Delete</button>
+      </form>
+    <div class="caption">
     <h3><%= row['name'] %></h3>
+    </div>
+    <h6>Category: <%= row['category'] %></h6>
     <p><%= row['description'] %></p>
+  </div>
   </li>
 
   <% end %>
