--- a/views/new.erb
+++ b/views/new.erb
@@ -10,7 +10,7 @@
     <div class="control-group">
       <label class="control-label">Description</label>
       <div class="controls">
-        <input type="text" name="description" class="input-xlarge" value="<%= @row['description'] if @row %>">
+        <input type="text" name="description" class="input-block-level" value="<%= @row['description'] if @row %>">
       </div>
     </div>
     <div class="control-group">
