--- a/views/home.erb
+++ b/views/home.erb
@@ -1,24 +1,18 @@
 <div id="myCarousel" class="carousel slide">
   <div class="carousel-inner">
     <div class="item">
-      <img src="http://twitter.github.com/bootstrap/assets/img/bootstrap-mdo-sfmoma-01.jpg" alt="">
+      <img src="/images/screenshot_all.png" alt="">
       <div class="carousel-caption">
-        <h4>First Thumbnail label</h4>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+        <h4>Store your favorite videos</h4>
+        <p>myTube dramatically enhances youTube playlists
+          by making play lists more dynamic and fun.</p>
       </div>
     </div>
     <div class="item">
-      <img src="http://twitter.github.com/bootstrap/assets/img/bootstrap-mdo-sfmoma-02.jpg" alt="">
+      <img src="/images/screenshot_new.png" alt="">
       <div class="carousel-caption">
-        <h4>Second Thumbnail label</h4>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-      </div>
-    </div>
-    <div class="item active">
-      <img src="http://twitter.github.com/bootstrap/assets/img/bootstrap-mdo-sfmoma-03.jpg" alt="">
-      <div class="carousel-caption">
-        <h4>Third Thumbnail label</h4>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+        <h4>Quickly add videos</h4>
+        <p>Adding and categorizing videos is fast and easy.</p>
       </div>
     </div>
   </div>
