put a donk on it

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,14 @@ body {
   background: url('/images/low_contrast_linen.png');
 }
 
+h1 {
+  font-size: 30px;
+}
+
+.lead {
+  font-size: 15px;
+}
+
 .thumbnail {
   height: 410px;
   padding: 7px;
@@ -55,11 +63,16 @@ button .trash {
   height: 14px;
 }
 .carousel {
-  width: 850px;
+  width: 940px;
   margin: 0 auto 0 auto;
 }
 
 .form-horizontal input
  {
   height: 40px;
+}
+
+footer {
+  color: #c1c1c1;
+  margin-right: 20px;
 }
