--- a/views/layout.erb
+++ b/views/layout.erb
@@ -26,9 +26,9 @@
 <body>
   <div class="container">
 
-  <%= erb :navbar %>
-
+<%= erb :navbar %>
 <%= yield %>
+<%= erb :footer %>
 
 </div>
 </body>
