--- a/views/new.erb
+++ b/views/new.erb
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="form-actions">
-      <button class="btn btn-primary"><%= @row.nil? ? "Add video" : "Edit video" %></button>
+      <button class="btn btn-primary"><%= @row.nil? ? "Add video" : "Save changes" %></button>
       <button class="btn">Cancel</button>
     </div>
   </fieldset>
