--- a/views/home.erb
+++ b/views/home.erb
@@ -1,21 +1,26 @@
-<div id="myCarousel" class="carousel slide">
-  <div class="carousel-inner">
-    <div class="item">
-      <img src="/images/screenshot_all.png" alt="">
-      <div class="carousel-caption">
-        <h4>Store your favorite videos</h4>
-        <p>myTube dramatically enhances youTube playlists
-          by making play lists more dynamic and fun.</p>
+<!-- Carousel
+  ================================================== -->
+  <div id="myCarousel" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="/images/screenshot_all.png" alt="">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>youTube playlists just got a lot better</h1>
+            <p class="lead">myTube gives you fine grained control on your video playlists.</p>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="/images/screenshot_new.png" alt="">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>You have never seen a form like this!</h1>
+            <p class="lead">Actually you have, but this one is made with unicorn blood.</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="item">
-      <img src="/images/screenshot_new.png" alt="">
-      <div class="carousel-caption">
-        <h4>Quickly add videos</h4>
-        <p>Adding and categorizing videos is fast and easy.</p>
-      </div>
-    </div>
-  </div>
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
-</div>
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+  </div><!-- /.carousel -->
