--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -13,7 +13,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">View videos  <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <% @nav_rows.each do |row| %>
-            <li><a href="/videos/<%= row['category'] %>"><%= row['category'] %> <span class="pull-right"><%= row['count'] %></spqn></a></li>
+            <li><a href="/videos/<%= row['category'] %>"><%= row['category'] %> <span class="pull-right"><%= row['count'] %></span></a></li>
             <% end %>
             <li class="divider"></li>
             <li><a href="/videos">Show all videos</a></li>
