added a carousel of videos

--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -17,6 +17,7 @@
             <% end %>
             <li class="divider"></li>
             <li><a href="/videos">Show all videos</a></li>
+            <li><a href="/carousel">Carousel (Beta)</a></li>
           </ul>
         </li>
       </ul>
