--- a/views/new.erb
+++ b/views/new.erb
@@ -18,7 +18,7 @@
       <div class="controls">
         <input type="text" name="url" class="input-xlarge" value="<%= @row['url'] if @row %>">
         <p class="help-block">Paste only the URL of the video to add</p>
-        <p class="help-block">Example: <strong>http://www.youtube.com/embed/z5Otla5157c</strong> </p>
+        <p class="help-block">Example: <strong><a href="http://www.youtube.com/embed/z5Otla5157c">http://www.youtube.com/embed/z5Otla5157c</strong></a></p>
       </div>
     </div>
     <div class="control-group">
