--- a/views/videos.erb
+++ b/views/videos.erb
@@ -12,8 +12,23 @@
 
       <a href="/videos/<%= row['id'] %>/edit" data-toggle="tooltip" title="Edit video" ><i class="icon-edit icon-white"></i></a>
 
-      <a href="/videos/<%= row['id'] %>/delete" data-toggle="tooltip" title="Delete video" ><i class="icon-trash icon-white"></i></a>
+<!-- begin modal -->
+      <a href="#deleteModal<%= row['id'] %>" data-toggle="modal" title="Delete video"><i class="icon-trash icon-white"></i></a>
 
+      <div id= "deleteModal<%= row['id'] %>" class="modal hide fade">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">YO!</button>
+          <h3>Delete "<%= row['name'] %>" ?</h3>
+        </div>
+        <div class="modal-body">
+          <p>This cannot be undone</p>
+        </div>
+        <div class="modal-footer">
+          <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+          <a href="/videos/<%= row['id'] %>/delete" class="btn btn-danger">Delete</a>
+        </div>
+      </div>
+<!-- end modal -->
 
       <h6>Category: <%= row['category'] %></h6>
       <div class="vid_description">
