title on carousel

--- a/views/videos.erb
+++ b/views/videos.erb
@@ -17,7 +17,7 @@
 
       <div id= "deleteModal<%= row['id'] %>" class="modal hide fade">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">YO!</button>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
           <h3>Delete "<%= row['name'] %>" ?</h3>
         </div>
         <div class="modal-body">
