for you rural juror

--- a/views/home.erb
+++ b/views/home.erb
@@ -6,7 +6,7 @@
         <img src="/images/screenshot_all.png" alt="">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Your youTube playlists just got a lot better</h1>
+            <h1>Your YouTube playlists just got a lot better</h1>
             <p class="lead">myTube gives you fine grained control on your video playlists.</p>
           </div>
         </div>
